@@ -1,4 +1,9 @@
-import { DatabaseFarmerSchema, QuantitativePlant, QuantitativeSeed } from '../../types/database';
+import {
+  DatabaseFarmerSchema,
+  QuantitativeItem,
+  QuantitativePlant,
+  QuantitativeSeed,
+} from '../../types/database';
 import { INITIAL_LIMIT_FOR_SILO, SILO_LIMIT_INCREASE_BY_LEVEL } from './constants';
 
 type QuantitativePlantItem = QuantitativePlant | QuantitativeSeed;
@@ -63,9 +68,7 @@ interface SiloLimits {
 }
 
 const getSiloLimits = (user: DatabaseFarmerSchema): SiloLimits => {
-  const countQuantitative = (
-    items: QuantitativePlantItem[] | DatabaseFarmerSchema['items'],
-  ): number =>
+  const countQuantitative = (items: Array<QuantitativePlantItem | QuantitativeItem>): number =>
     items.reduce(
       (p, c) =>
         p +
